--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -4182,6 +4182,8 @@ These are the files that require creating/editing for each language.
 
 The .qm files are the compiled translation files used by pyqt.
 
+The directories qtplasmac_4x3/languages and qtplasmac_9x16/languages are only for links to the .qm files in qtplasmac/languages.
+
 The language is determined by an underscore plus the first two letters of the locale.
 For example, if an Italian translation was being done then it would be `_it`.
 It will be referred to as `_xx` in this document, so `qtplasmac_xx.ts` in this document would actually be `qtplasmac_it.ts` for an Italian translation.
@@ -4228,22 +4230,26 @@ The user needs to be careful with the length of strings that appear on widgets a
 When editing is complete save the file: +
 `File -> Save`
 
-
 Then create the .qm file: +
 `File -> Release`
 
+Close linguist.
 
 Then create links to the compiled .qm file for the other QtPlasmaC GUIs.
 ----
-$ ln -s qtplasmac_en.qm ../../qtplasmac_4x3/languages/
-$ ln -s qtplasmac_en.qm ../../qtplasmac_9x16/languages/
+$ ./langlink xx
 ----
+
+[NOTE]
+this command is a script which creates a link in both qtplasmac_4x3/languages and qtplasmac_9x16/languages to the above .qm file and then renames the link to match the GUI name.
 
 QtPlasmaC will be translated to the language of the current locale on the next start so long as a .qm file exists in that language.
 
 Users are welcome to submit translation files for inclusion into QtPlasmaC.
+An easy method is to post the up to date qtplasmac_xx.ts file on the forum and the maintainers will install the translations.
+
 The preferred method is to submit a pull request from the users GitHub account as described in the https://www.linuxcnc.org/docs/html/code/contributing-to-linuxcnc.html[contributing to LinuxCNC] documentation.
-The only files required to be committed are qtplasmac_xx.ts and qtplasmac_xx.qm.
+The files required to be committed are qtplasmac_xx.ts and qtplasmac_xx.qm in the qtplasmc/languages directory plus the links in both the qtplasmac_4x3/languages and qtplasmac_9x16/languages directories.
 
 == Appendix
 
